@@ -4,8 +4,8 @@ dnl First, define all of the version numbers up front.
 dnl In particular, this allows the version macro to be used in AC_INIT
 
 dnl These first two version numbers are updated automatically on each release.
-m4_define([LIBARCHIVE_VERSION_S],[2.5.4b])
-m4_define([LIBARCHIVE_VERSION_N],[2005004])
+m4_define([LIBARCHIVE_VERSION_S],[2.5.5])
+m4_define([LIBARCHIVE_VERSION_N],[2005005])
 
 dnl bsdtar versioning tracks libarchive
 m4_define([BSDTAR_VERSION_S],LIBARCHIVE_VERSION_S())
